  * ADDED: Changed Cipher Block behaviour:
            - Cipher Blocks can now be locked - their inventory is not accessible via automation or manually while they are locked. They can still be broken, though!
            - Each side of the Cipher Block now corresponds to one of its six slots.

  * SOON: GregTech recipe mode for all the Computronics blocks and items (Vexatos)

==== 0.6.4 (13 August 2014 [1.7.2, 1.7.10]) ====

  * ADDED: You can set chat box names with getName() and setName().
  * ADDED: Improved German and Russian translations, by Vexatos and Adaptivity respectively.
  * FIXED: distanceUp() and distanceDown() in camera robots. For real. I actually tested it this time. It works.
  * FIXED: Potential CC issues with Lamps. (thanks GyroW)
  * FIXED: Wired Modems from CC can now be used on Lamps. (thanks GyroW)
  * FIXED: Radars and Radar Upgrades in OpenComputers now work again!
  * WARNING: Apparently, there never was a 0.6.3. Whatever.

==== 0.6.2 (1 August 2014 [1.7.2, 1.7.10]) ====

  * ADDED: Factorization Charge Conductor support!
  * ADDED: FSP Steam Transporter support!
  * ADDED: MFR RedNet support for Cipher Blocks!
  * WARNING: Mod compatibility configs have changed - if you disabled something added in 0.6.0 or 0.6.1, you might need to disable it again.

==== 0.6.1 (25 July 2014 [1.7.2, 1.7.10]) ====

  * ADDED: Deep Storage Unit API support for CC and OpenC (read: JABBA barrels)
  * FIXED: Fixed a boot crash when not having Project: Red installed. (This might feel ironic for some people who know me better.)

==== 0.6.0 (//Compatible Edition//) (25 July 2014 [1.7.2, 1.7.10]) ====

  * ADDED: Colorful Lamps! Supporting ComputerCraft, OpenComputers, NedoComputers, Project: Red, MineFactory Reloaded //and// RedLogic for setting their colour!