@@ -18,6 +18,10 @@
   * ADDED: Changed Cipher Block behaviour:
             - Cipher Blocks can now be locked - their inventory is not accessible via automation or manually while they are locked. They can still be broken, though!
             - Each side of the Cipher Block now corresponds to one of its six slots.
+  * REMOVED: Project: Red CC redstone integration - it's now improved and inside P:Red itself!
+  * FIXED: Disabling the Chat Box will now disable the (potentially lag-inducing on large server) Chat Box event code.
+  * FIXED: OC 1.2 will now give an error message when used. (YES, USE OC 1.3, IT'S BETTER)
+  * MISC: Rewritten parts of the TE code to use the new AsieLib 0.3.0 methods.
 
   * SOON: GregTech recipe mode for all the Computronics blocks and items (Vexatos)
 
